<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".UI.mainFragment.settingFragment">

       <TextView
           android:id="@+id/textView18"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"

           android:text="@string/settings"
           android:textColor="#A9000000"
           android:textSize="22dp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/image_friend"

           android:layout_width="120dp"
           android:layout_height="100dp"

           android:layout_marginTop="80dp"
           android:padding="3dp"
           android:src="@drawable/user"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <TextView
           android:id="@+id/textView19"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="18dp"
           android:text="@string/me"
           android:textSize="20dp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/image_friend" />

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView3"
           android:layout_width="288dp"
           android:layout_height="48dp"
           android:layout_marginTop="32dp"
           app:cardCornerRadius="10dp"
           app:cardElevation="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.642"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView19">

           <ImageView
               android:id="@+id/imageViefw23"
               android:layout_width="26dp"
               android:layout_height="23dp"
               android:layout_marginStart="24dp"
               android:layout_marginTop="15dp"
               app:srcCompat="@drawable/logout" />

           <TextView
               android:id="@+id/textViewss21"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="58dp"
               android:layout_marginTop="15dp"

               android:text="@string/log_out"
               android:textColor="#EE232323"
               android:textSize="14dp"
               android:textStyle="italic" />
       </androidx.cardview.widget.CardView>


   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>