<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.authentication.CraeteAccActivity">

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="120dp"
            android:layout_height="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="Sign Up  "
            android:textColor="#F0000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/your_name"
            app:layout_constraintStart_toStartOf="@+id/nameCraete"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/nameCraete"
            android:layout_width="255dp"
            android:layout_height="39dp"
            android:background="@drawable/number"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="6dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/passCraete"
            android:layout_width="252dp"
            android:layout_height="39dp"
            android:background="@drawable/number"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:padding="6dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/passCraete"
            app:layout_constraintTop_toBottomOf="@+id/nameCraete" />

        <TextView
            android:id="@+id/textVieweedf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password"
            app:layout_constraintBottom_toTopOf="@+id/conPassCraete"
            app:layout_constraintStart_toStartOf="@+id/conPassCraete"
            app:layout_constraintTop_toBottomOf="@+id/passCraete" />

        <EditText
            android:id="@+id/conPassCraete"
            android:layout_width="255dp"
            android:layout_height="39dp"
            android:background="@drawable/number"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVieweedf2" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/btn"

            android:text="@string/confirm"
            android:textColor="#ffff"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passCraete" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="131dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
