<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.authentication.Login">

        <ProgressBar
            android:id="@+id/progressBar5"
            style="?android:attr/progressBarStyle"
            android:layout_width="108dp"
            android:layout_height="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/sign_in"
            android:textColor="#F0000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone_log"
            android:layout_width="252dp"
            android:layout_height="44dp"
            android:background="@drawable/number"
            android:ems="10"
            android:inputType="phone"
            android:padding="6dp"
            android:hint="              01-----------"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="@+id/phone_log"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textVieweedf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/phone_log" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="255dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="16dp"

            android:background="@drawable/number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVieweedf2"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/number"
                android:inputType="textPassword"
                android:padding="6dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/Signin_button"
            android:layout_width="236dp"
            android:layout_height="44dp"
            android:layout_marginTop="88dp"

            android:background="@drawable/btn"
            android:text="@string/sign_in"
            android:textColor="#ffff"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="164dp"
            android:layout_height="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo1" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Signin_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>